Update download rule in workflow configuration

--- a/assets/option/option_workflow_download.yml
+++ b/assets/option/option_workflow_download.yml
@@ -1,7 +1,8 @@
 # GitHub Actions 下载脚本配置
 dir_rule:
   base_dir: ${JM_DOWNLOAD_DIR}
-  rule: Bd_Aauthor_Atitle_Pindex
+  rule: Bd_Aauthor_Aidoname_Pindextitle
+  normalize_zh: zh-cn
 
 client:
   impl: api # 使用api可免登录下载本子
